--- a/src/scss/tgico/_style.scss
+++ b/src/scss/tgico/_style.scss
@@ -21,6 +21,8 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  vertical-align: middle;
+  transform: translateY(0.15em);
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
